--- a/bug-solving/src/app/issuedetail/issuedetail.component.css
+++ b/bug-solving/src/app/issuedetail/issuedetail.component.css
@@ -86,7 +86,7 @@ td {
 }
 
 .example-full-width {
-  width: 30em;
+  width: auto;
 }
 
 .comment-image {
@@ -142,3 +142,28 @@ margin: 10px;
 /* z-index: 11; */
 /* opacity: 11; */
 }
+:host ::ng-deep .multiselect-dropdown .dropdown-list {
+  display: inline-block;
+  border: 1px solid #d01c1c;
+  width: 200%;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.1;
+  text-align: left;
+  vertical-align: middle;
+  cursor: pointer;
+  background-image: none;
+  border-radius: 4px;
+  }
+  /* :host ::ng-deep .multiselect-dropdown .dropdown-btn{
+display: inline-block;
+width: 400px;
+background-color: red;
+  } */
+  .select-box{
+    display: flex;
+    /* width: 400px; */
+    /* background-color: royalblue; */
+  }
