--- a/bug-solving/src/app/issuedetail/issuedetail.component.css
+++ b/bug-solving/src/app/issuedetail/issuedetail.component.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: row-reverse;
   height: auto;
   width: auto;
   justify-content: center;
@@ -14,55 +14,15 @@
   overflow: auto;
 }
 
-mat-card {
-  text-align: left;
-  width: auto;
-  height: auto;
-  background-color: white;
-}
 
-.image {
-  height: 25px;
-  border-radius: 30px;
-  margin: 5px;
-}
-
-.projectdetails {
+.activity {
   width: 50%;
   height: 100vh;
   background-color: whitesmoke;
   overflow: auto;
 }
 
-.activity {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: left;
-  justify-content: left;
-  height: auto;
-  background-color: rgb(243, 242, 242);
-  /* overflow-x: auto; */
-}
 
-mat-card-actions {
-  text-align: left;
-  justify-content: left;
-}
-
-/* mat-select{
-    width: 60px;
-    
-} */
-
-/* mat-form-field{
-    width: 70px;
-} */
-
-td {
-  margin: 10px;
-  padding: 20px;
-}
 
 .history {
   /* background-color: rgb(224, 224, 245); */
@@ -79,34 +39,6 @@ td {
 .historydata {
   margin-top: 8px;
 }
-
-.mat-tab-label {
-  /* width:100px; */
-  min-width: 100px;
-}
-
-.example-full-width {
-  width: auto;
-}
-
-.comment-image {
-  width: 30px;
-  border-radius: 30px;
-  padding: 5px;
-}
-.comment-data-image {
-  width: 25px;
-  border-radius: 30px;
-  padding: 5px;
-}
-.comment-user {
-  font-size: 10px;
-  margin-top: 3px;
-}
-.user-comment-data {
-  display: flex;
-  flex-wrap: wrap;
-}
 .comment{
     display: flex;
     flex-direction: column;
@@ -114,56 +46,6 @@ td {
     margin: 5px;
     padding: 10px;
 }
-.icon mat-icon{
-    margin: 10px;
-}
-.example-form{
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    position: sticky;
-    top: 0;
-    z-index: 100;
 
-    background-color: white;
-    height: auto;
-}
-.btn-outline-primary{
-  border:none;
-}
-.dropdown-menu{
-/* overflow: scroll; */
-width: 400%;
-}
-.item{
-/* background-color:whitesmoke; */
-width: auto;
-margin: 10px;
 
-/* z-index: 11; */
-/* opacity: 11; */
-}
-:host ::ng-deep .multiselect-dropdown .dropdown-list {
-  display: inline-block;
-  border: 1px solid #d01c1c;
-  width: 300px;
-  padding: 6px 12px;
-  margin-bottom: 0;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 1.1;
-  text-align: left;
-  vertical-align: middle;
-  cursor: pointer;
-  background-image: none;
-  border-radius: 4px;
-  }
-  /* :host ::ng-deep .multiselect-dropdown .dropdown-btn{
-display: inline-block;
-width: 400px;
-background-color: red;
-  } */
-  .select-box{
-    display: flex;
-    /* width: 400px; */
-    /* background-color: royalblue; */
-  }
+
