--- a/bug-solving/src/app/app.component.html
+++ b/bug-solving/src/app/app.component.html
@@ -1,4 +1,11 @@
+<!-- <div *ngFor="let message of messageList">
+
+</div>
+
+<input [(ngModel)]="newMessage" (keyup)="$event.keyCode == 13 && sendMessage()" />
+<button (click)="sendMessage()">Send Message</button> -->
 <!-- <app-signin></app-signin> -->
+
 <app-navbar></app-navbar>
 <!-- <app-sidenave></app-sidenave> -->
 
